--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,14 +28,7 @@
                     <label for="confirm_password">Confirm Password</label>
                     <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
                 </div>
-                 <div class="form-group">
-                    <label for="user_type">I am joining as:</label>
-                    <select class="form-control" id="user_type" name="user_type" required>
-                        <option value="" disabled selected>Select a role</option>
-                        <option value="attendee">An Attendee</option>
-                        <option value="organizer">An Organizer</option>
-                    </select>
-                </div>
+                <input type="hidden" name="user_type" value="attendee">
                 <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
             </form>
             <p class="mt-3 text-center text-muted">
