--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,17 @@
                     <h3 class="card-title">{{ event.name }}</h3>
                     <p class="card-text text-muted">
                         <small>
-                           {{ event.date.strftime('%a, %b %d, %Y') }} at {{ event.time.strftime('%I:%M %p') }} <br>
+                           {{ event.date.strftime('%a, %b %d, %Y') }}
+                           {% if event.start_time and event.end_time %}
+                           at {{ event.start_time.strftime('%I:%M %p') }} - {{ event.end_time.strftime('%I:%M %p') }}
+                           {% endif %}
+                           <br>
                            {% if event.venue %}
                              📍 {{ event.venue.name }}, {{ event.venue.city }}
                            {% endif %}
                         </small>
                      </p>
-                    <p class="card-text">{{ event.description | truncate(100, True) }}</p> {# Truncate description #}
+                    <p class="card-text">{{ event.description | truncate(100, True) }}</p>
                 </div>
                  <div class="card-footer">
                      <a href="{{ url_for('event_details', event_id=event.event_id) }}" class="btn btn-primary btn-sm">View Details & Tickets</a>
