--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar">    
             <div class="container">
                 <a class="navbar-brand" href="{{ url_for('index') }}">
                     <span>EventFlow</span>
@@ -60,6 +60,7 @@
 
     <!-- Add any JavaScript files here -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-     {% block scripts_extra %}{% endblock %}
+    {% block scripts %}{% endblock %}
+    {% block scripts_extra %}{% endblock %}
 </body>
 </html>
